--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - run: apt-get -y update -qq && apt-get -y install libopus-dev libopusfile-dev
+    - run: sudo apt-get -y update -qq && sudo apt-get -y install libopus-dev libopusfile-dev
 
     - name: Set up Go
       uses: actions/setup-go@v3
