--- a/cmd/test.env
+++ b/cmd/test.env
@@ -1,3 +1,3 @@
-BOT_TOKEN=MTAyMjE2MzcxMjMyNjUxMjY4MA.GhsBdP.VwAN5O4pTv2quozAGl1RzsEqWQxwKtQ-7WHmgc
+BOT_TOKEN=
 PREFIX=$
 YOUTUBE_URL=https://www.googleapis.com/youtube/v3/
